--- a/pom.xml
+++ b/pom.xml
@@ -16,41 +16,57 @@
 
     <packaging>hpi</packaging>
 
+    <properties>
+        <matrix.project.version>1.4</matrix.project.version>
+        <commons.core.version>1.509.1</commons.core.version>
+        <email-ext.version>2.39</email-ext.version>
+        <mailer.version>1.13</mailer.version>
+        <token-macro.version>1.10</token-macro.version>
+        <credentials.version>1.21</credentials.version>
+        <maven-plugin.version>2.8</maven-plugin.version>
+        <mockito-core.version>1.8.5</mockito-core.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>matrix-project</artifactId>
-            <version>1.4</version>
+            <version>${matrix.project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.hp.mercury.ci</groupId>
             <artifactId>commons-core</artifactId>
-            <version>1.509.1</version>
+            <version>${commons.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>email-ext</artifactId>
-            <version>2.39</version>
+            <version>${email-ext.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>mailer</artifactId>
-            <version>1.13</version>
+            <version>${mailer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>token-macro</artifactId>
-            <version>1.10</version>
+            <version>${token-macro.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
-            <version>1.21</version>
+            <version>${credentials.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>maven-plugin</artifactId>
-            <version>2.8</version>
+            <version>${maven-plugin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
         </dependency>
     </dependencies>
     <repositories>
