--- a/pom.xml
+++ b/pom.xml
@@ -7,67 +7,74 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.580.2</version>
+        <version>1.625.3</version>
+        <relativePath></relativePath>
     </parent>
 
     <groupId>com.hp.mercury.ci.jenkins.plugins</groupId>
     <artifactId>downstream-logs</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
 
     <packaging>hpi</packaging>
+
+    <properties>
+
+        <matrix.project.version>1.6.1</matrix.project.version>
+        <commons.core.version>1.509.1</commons.core.version>
+        <email.ext.version>2.39</email.ext.version>
+        <mailer.version>1.13</mailer.version>
+        <token.macro.version>1.10</token.macro.version>
+        <credentials.version>1.21</credentials.version>
+        <maven.plugin.version>2.8</maven.plugin.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>matrix-project</artifactId>
-            <version>1.4</version>
+            <version>${matrix.project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.hp.mercury.ci</groupId>
             <artifactId>commons-core</artifactId>
-            <version>1.509.1</version>
+            <version>${commons.core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>email-ext</artifactId>
-            <version>2.39</version>
+            <version>${email.ext.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>mailer</artifactId>
-            <version>1.13</version>
+            <version>${mailer.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>token-macro</artifactId>
-            <version>1.10</version>
+            <version>${token.macro.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>credentials</artifactId>
-            <version>1.21</version>
+            <version>${credentials.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.main</groupId>
             <artifactId>maven-plugin</artifactId>
-            <version>2.8</version>
+            <version>${maven.plugin.version}</version>
         </dependency>
     </dependencies>
     <repositories>
         <repository>
-            <id>jenkinsci</id>
-            <name>jenkinsci-releases</name>
-            <url>http://repo.jenkins-ci.org/releases</url>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
         </repository>
     </repositories>
-    <distributionManagement>
-        <repository>
-            <id>devops-releases</id>
-            <url>http://mydtbld0051.isr.hp.com:8081/nexus/content/repositories/devops-releases</url>
-        </repository>
-        <snapshotRepository>
-            <id>devops-snapshots</id>
-            <url>http://mydtbld0051.isr.hp.com:8081/nexus/content/repositories/devops-snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
